# coworking-space-manager

./: .dockerignore  .gitignore  README.md  docker-compose.yml
auth-service/: Dockerfile  main.py  requirements.txt
frontend/: .dockerignore  Dockerfile  package.json
frontend/pages/: dashboard.js  index.js  login.js  register.js
management-service/: index.js  package.json
reservation-service/: Cargo.toml  Dockerfile
reservation-service/src/: main.rs
