[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tower-http = { version = "0.4", features = ["cors"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
